# eggbeater

./: .gitignore  10-22 presentation  BUILD.creole  BurndownChart1  F429 Datasheet & UserManual  GUI  GUI.creole  Makefile  Presentation 10-21.pptx  QtGUI  README.creole  ROADMAP  ROADMAP.creole  Sam Adams' Status  TODO.creole  Thumbs.db  brainStorm.creole  meeting9-23  meeting_10-14-2014  meeting_9-16-14  meeting_9-23-14  meeting_9-30-14  meeting_9-9-14  talkingPoints.creole  wpx1yw2g.p4i.txt
Parse-USB-Packet/: command, data bytes
QtGUI/: EncryptApp.pro  InvokeCLI.cpp  InvokeCLI.h  Read File & Creat PopUP window for error msg  filedialog.cpp  filedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  secdialog.cpp  secdialog.h  secdialog.ui  selectCipher.h  selectCipher.ui  selectcipher.cpp
QtGUI/Reading-and-PopUp-window/: README  getline.c  gtkpopup.c  main.c  popup.h  windowspopup.c
SerialCom/: Serial.cpp  SerialClass.h  another_SerialClass.h  comIO.cpp  serial_com.cpp  tchar.h  usb_parse.cpp  windows.txt
SerialCom/comIO/: comIO.cpp  comIO.h  file1.txt  file2.txt  main.cpp  makefile
build-EncryptApp-Desktop_Qt_5_3_MSVC2010_OpenGL_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h  ui_secdialog.h  ui_selectCipher.h
build-EncryptApp-Desktop_Qt_5_3_MSVC2010_OpenGL_32bit-Debug/debug/: EncryptApp.exe_manifest.rc  EncryptApp.ilk  moc_filedialog.cpp  moc_mainwindow.cpp  moc_selectCipher.cpp
cli/: CMakeLists.txt  Makefile  cli-tests.sh  run-tests.sh
cli/getOptV1/: getOpt.cpp  getOpt.h  main.cpp  makefile
cli/getOptV2/: README  getOpt.cpp  getOpt.h  main.cpp  write.cpp
cli/include/eggbeater/: Common.h  Control.h  Crypto.h  Discovery.h  Options.h  Serial.h
cli/src/: CMakeLists.txt  Control.cpp  Crypto.cpp  Discovery.cpp  Options.cpp  SerialCommunication.cpp  getTempPath.cpp  main.cpp  packet.cpp
cli/src/EncryptionModule/: Makefile  enc_functions.cpp  enc_functions.h  main.cpp  prod_aes_encrypt.cpp  v4_CLI_fileEncrypt.cpp
cli/src/os/win/: SerialCommunication.cpp
cli/tests/: CMakeLists.txt  CryptoPP_tests.cpp  Crypto_CipherMode_tests.cpp  Crypto_tests.cpp  Discovery_test_absent.cpp  Discovery_test_present.cpp  Discovery_tests.cpp  Options_tests.cpp  Packet_tests.cpp  SerialComm_test_file1.txt  SerialComm_test_port.cpp  SerialComm_tests.cpp
design/: .~lock.Presentation 12-9.ppt#  10-22 presentation  BurndownChart1  Executive.Summary.docx  F429 Datasheet & UserManual  GUI.creole  Presentation 12-9.ppt  Presentation 12-9.pptx  Sam Adams' Status  brainStorm.creole  talkingPoints.creole
embedded/: EggBeater.depend  EggBeater.ebp  EggBeater.elay  EggBeater.eworkspace
embedded/inc/: Control.h  GUI_Button.h  Keypad.h  Packet.h  common.h  fingerprint_reader.h  stm32f4xx_hal_conf.h  usb_interface.h  usbd_conf.h  usbd_desc.h
embedded/inc/gt511/: gt511c1r.h
embedded/src/: Control.c  GUI_Button.c  Keypad.c  Packet.c  fingerprint_reader.c  main.c  startup_stm32f429x.S  usb_interface.c  usbd_conf.c  usbd_desc.c
embedded/src/gt511/: gt511c1r_stm32f4.c
embedded/tests/: Makefile  control_tests.cpp  polar_ssl_sha_256_tests.cpp
meeting notes/: meeting-11-18  meeting-11-4  meeting_10-07-14  meeting_10-21-2014  meeting_9-16-14  meeting_9-23-14  meeting_9-9-14
src/: Crypto.cpp
tests/: Crypto_tests.cpp
