
project(EggBeater)
cmake_minimum_required(VERSION 2.8)

if(CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
    message(FATAL_ERROR
"In-source builds are not allowed. Please specify a directory outside \
the GCC-ARM directory. This process created the file 'CMakeCache.txt' and \
the directory 'CMakeFiles'; please delete them.")
endif()

# Set up proper output directories
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(EGGBEATER_CRYPTOPP_PATH "${CMAKE_SOURCE_DIR}/deps/cryptopp562" CACHE FILEPATH "Absolute path to the CryptoPP library files.")
set(EGGBEATER_GTEST_PATH "${CMAKE_SOURCE_DIR}/deps/gtest-1.7.0" CACHE FILEPATH "Absolute path to the root of the GoogleTest directory.")

include_directories("${CMAKE_SOURCE_DIR}/include" "${EGGBEATER_CRYPTOPP_PATH}")
link_directories("${CMAKE_BINARY_DIR}/lib")

# Library file for CryptoPP

set(CRYPTOPP_SOURCES
"${EGGBEATER_CRYPTOPP_PATH}/3way"
"${EGGBEATER_CRYPTOPP_PATH}/adler32"
"${EGGBEATER_CRYPTOPP_PATH}/algebra"
"${EGGBEATER_CRYPTOPP_PATH}/algparam"
"${EGGBEATER_CRYPTOPP_PATH}/arc4"
"${EGGBEATER_CRYPTOPP_PATH}/asn"
"${EGGBEATER_CRYPTOPP_PATH}/authenc"
"${EGGBEATER_CRYPTOPP_PATH}/base32"
"${EGGBEATER_CRYPTOPP_PATH}/base64"
"${EGGBEATER_CRYPTOPP_PATH}/basecode"
"${EGGBEATER_CRYPTOPP_PATH}/bfinit"
"${EGGBEATER_CRYPTOPP_PATH}/blowfish"
"${EGGBEATER_CRYPTOPP_PATH}/blumshub"
"${EGGBEATER_CRYPTOPP_PATH}/camellia"
"${EGGBEATER_CRYPTOPP_PATH}/cast"
"${EGGBEATER_CRYPTOPP_PATH}/casts"
"${EGGBEATER_CRYPTOPP_PATH}/cbcmac"
"${EGGBEATER_CRYPTOPP_PATH}/ccm"
"${EGGBEATER_CRYPTOPP_PATH}/channels"
"${EGGBEATER_CRYPTOPP_PATH}/cmac"
"${EGGBEATER_CRYPTOPP_PATH}/cpu"
"${EGGBEATER_CRYPTOPP_PATH}/crc"
"${EGGBEATER_CRYPTOPP_PATH}/cryptlib"
"${EGGBEATER_CRYPTOPP_PATH}/cryptlib_bds"
"${EGGBEATER_CRYPTOPP_PATH}/default"
"${EGGBEATER_CRYPTOPP_PATH}/des"
"${EGGBEATER_CRYPTOPP_PATH}/dessp"
"${EGGBEATER_CRYPTOPP_PATH}/dh"
"${EGGBEATER_CRYPTOPP_PATH}/dh2"
"${EGGBEATER_CRYPTOPP_PATH}/dll"
"${EGGBEATER_CRYPTOPP_PATH}/dsa"
"${EGGBEATER_CRYPTOPP_PATH}/eax"
"${EGGBEATER_CRYPTOPP_PATH}/ec2n"
"${EGGBEATER_CRYPTOPP_PATH}/eccrypto"
"${EGGBEATER_CRYPTOPP_PATH}/ecp"
"${EGGBEATER_CRYPTOPP_PATH}/elgamal"
"${EGGBEATER_CRYPTOPP_PATH}/emsa2"
"${EGGBEATER_CRYPTOPP_PATH}/eprecomp"
"${EGGBEATER_CRYPTOPP_PATH}/esign"
"${EGGBEATER_CRYPTOPP_PATH}/files"
"${EGGBEATER_CRYPTOPP_PATH}/filters"
"${EGGBEATER_CRYPTOPP_PATH}/fips140"
"${EGGBEATER_CRYPTOPP_PATH}/fipstest"
"${EGGBEATER_CRYPTOPP_PATH}/gcm"
"${EGGBEATER_CRYPTOPP_PATH}/gf2_32"
"${EGGBEATER_CRYPTOPP_PATH}/gf256"
"${EGGBEATER_CRYPTOPP_PATH}/gf2n"
"${EGGBEATER_CRYPTOPP_PATH}/gfpcrypt"
"${EGGBEATER_CRYPTOPP_PATH}/gost"
"${EGGBEATER_CRYPTOPP_PATH}/gzip"
"${EGGBEATER_CRYPTOPP_PATH}/hex"
"${EGGBEATER_CRYPTOPP_PATH}/hmac"
"${EGGBEATER_CRYPTOPP_PATH}/hrtimer"
"${EGGBEATER_CRYPTOPP_PATH}/ida"
"${EGGBEATER_CRYPTOPP_PATH}/idea"
"${EGGBEATER_CRYPTOPP_PATH}/integer"
"${EGGBEATER_CRYPTOPP_PATH}/iterhash"
"${EGGBEATER_CRYPTOPP_PATH}/luc"
"${EGGBEATER_CRYPTOPP_PATH}/mars"
"${EGGBEATER_CRYPTOPP_PATH}/marss"
"${EGGBEATER_CRYPTOPP_PATH}/md2"
"${EGGBEATER_CRYPTOPP_PATH}/md4"
"${EGGBEATER_CRYPTOPP_PATH}/md5"
"${EGGBEATER_CRYPTOPP_PATH}/misc"
"${EGGBEATER_CRYPTOPP_PATH}/modes"
"${EGGBEATER_CRYPTOPP_PATH}/mqueue"
"${EGGBEATER_CRYPTOPP_PATH}/mqv"
"${EGGBEATER_CRYPTOPP_PATH}/nbtheory"
"${EGGBEATER_CRYPTOPP_PATH}/network"
"${EGGBEATER_CRYPTOPP_PATH}/oaep"
"${EGGBEATER_CRYPTOPP_PATH}/osrng"
"${EGGBEATER_CRYPTOPP_PATH}/panama"
"${EGGBEATER_CRYPTOPP_PATH}/pch"
"${EGGBEATER_CRYPTOPP_PATH}/pkcspad"
"${EGGBEATER_CRYPTOPP_PATH}/polynomi"
"${EGGBEATER_CRYPTOPP_PATH}/pssr"
"${EGGBEATER_CRYPTOPP_PATH}/pubkey"
"${EGGBEATER_CRYPTOPP_PATH}/queue"
"${EGGBEATER_CRYPTOPP_PATH}/rabin"
"${EGGBEATER_CRYPTOPP_PATH}/randpool"
"${EGGBEATER_CRYPTOPP_PATH}/rc2"
"${EGGBEATER_CRYPTOPP_PATH}/rc5"
"${EGGBEATER_CRYPTOPP_PATH}/rc6"
"${EGGBEATER_CRYPTOPP_PATH}/rdtables"
"${EGGBEATER_CRYPTOPP_PATH}/rijndael"
"${EGGBEATER_CRYPTOPP_PATH}/ripemd"
"${EGGBEATER_CRYPTOPP_PATH}/rng"
"${EGGBEATER_CRYPTOPP_PATH}/rsa"
"${EGGBEATER_CRYPTOPP_PATH}/rw"
"${EGGBEATER_CRYPTOPP_PATH}/safer"
"${EGGBEATER_CRYPTOPP_PATH}/salsa"
"${EGGBEATER_CRYPTOPP_PATH}/seal"
"${EGGBEATER_CRYPTOPP_PATH}/seed"
"${EGGBEATER_CRYPTOPP_PATH}/serpent"
"${EGGBEATER_CRYPTOPP_PATH}/sha"
"${EGGBEATER_CRYPTOPP_PATH}/sha3"
"${EGGBEATER_CRYPTOPP_PATH}/shacal2"
"${EGGBEATER_CRYPTOPP_PATH}/shark"
"${EGGBEATER_CRYPTOPP_PATH}/sharkbox"
"${EGGBEATER_CRYPTOPP_PATH}/simple"
"${EGGBEATER_CRYPTOPP_PATH}/skipjack"
"${EGGBEATER_CRYPTOPP_PATH}/socketft"
"${EGGBEATER_CRYPTOPP_PATH}/sosemanuk"
"${EGGBEATER_CRYPTOPP_PATH}/square"
"${EGGBEATER_CRYPTOPP_PATH}/squaretb"
"${EGGBEATER_CRYPTOPP_PATH}/strciphr"
"${EGGBEATER_CRYPTOPP_PATH}/tea"
"${EGGBEATER_CRYPTOPP_PATH}/tftables"
"${EGGBEATER_CRYPTOPP_PATH}/tiger"
"${EGGBEATER_CRYPTOPP_PATH}/tigertab"
"${EGGBEATER_CRYPTOPP_PATH}/trdlocal"
"${EGGBEATER_CRYPTOPP_PATH}/ttmac"
"${EGGBEATER_CRYPTOPP_PATH}/twofish"
"${EGGBEATER_CRYPTOPP_PATH}/vmac"
"${EGGBEATER_CRYPTOPP_PATH}/wait"
"${EGGBEATER_CRYPTOPP_PATH}/wake"
"${EGGBEATER_CRYPTOPP_PATH}/whrlpool"
"${EGGBEATER_CRYPTOPP_PATH}/winpipes"
"${EGGBEATER_CRYPTOPP_PATH}/xtr"
"${EGGBEATER_CRYPTOPP_PATH}/xtrcrypt"
"${EGGBEATER_CRYPTOPP_PATH}/zdeflate"
"${EGGBEATER_CRYPTOPP_PATH}/zinflate"
"${EGGBEATER_CRYPTOPP_PATH}/zlib")

add_library(CryptoPP ${CRYPTOPP_SOURCES})

add_subdirectory(src)
add_subdirectory(tests)
